kubernetes/basicpodDeployment/deprollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-app
  namespace: devproject
  labels:
    app: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-app
  template:
    metadata:
      labels:
        app: rollouts-app
    spec:
      containers:
        - name: rollouts-app
          image: ramasamy123/wavecafe:v1
#          image: ramasamy123/dozecafe:v1
          name: webcon
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: devproject
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  namespace: devproject
spec:
  ingressClassName: nginx
  rules:
    - host: "www.suryateck.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rollouts-demo
                port:
                  number: 80
